# bcs-ntnu-2021

./: .gitignore  .gitmodules  project-architecture.md  project-demo.md  project-description.md  project-plan.md
blog/: architecture.md  the-great-internet-reset.md
did/: .editorconfig  .gitignore  Cargo.toml  README.md
did-cli/: Cargo.toml  README.md  TODO.md
did-cli/src/: lib.rs
didland/: Cargo.toml  README.md
meetings/: 2019-01-19-supervisor-weekly.md  2019-01-26-domain-experts-weekly.md  2021-01-19-domain-experts-weekly.md  2021-01-19-supervisor-weekly.md  2021-01-26-domain-experts-weekly.md  2021-01-26-supervisor-weekly.md  2021-02-02-domain-experts-weekly.md  2021-02-02-supervisor-weekly.md  2021-02-09-domain-experts-weekly.md  2021-02-16-domain-experts-weekly.md  2021-02-19-supervisor-weekly.md  2021-02-23-domain-experts-weekly.md  2021-03-02-domain-experts-weekly.md  2021-03-03-supervisor-weekly.md  2021-03-17-supervisor-weekly.md  2021-03-23-domain-experts-weekly.md  2021-03-24-supervisor-weekly.md  2021-03-31-supervisor-weekly.md  2021-04-06-domain-experts-weekly.md  2021-04-07-supervisor-weekly.md  2021-04-13-domain-experts-weekly.md  2021-04-20-domain-experts-weekly.md  2021-04-27-domain-experts-weekly.md  2021-04-31-supervisor-weekly.md  2021-05-04-domain-experts-weekly.md  2021-05-05-supervisor-weekly.md  2021-05-12-supervisor-weekly.md  2021-06-15-domain-experts-weekly.md
paper/: 01-introduction.md  02-background.md  02-requirements.md  03-application-architecture.md  03-problem-statement.md  04-command-line-interface.md  04-methodology.md  05-implementation.md  06-implementation.md  06-reflection.md  07-discussion.md  09-appendix.md  1-introduction.md  10-critique.md  10-references.md  11-future-work.md  2-background.md  3-problem-statement.md  4-methodology.md  7-reflection.md
playground/didchat2/: .gitignore  Cargo.toml  README.md
playground/didchat2/src/: lib.rs  main.rs
playground/keytojwk/: Cargo.toml
playground/keytojwk/src/: main.rs
report/: 00-header.md  01-introduction.md  02-development-process.md  02-requirements.md  03-development-process.md  (+23 more)
(+66 files in other folders)
