[package]
name = "did"
version = "0.1.0"
authors = ["Jonas Johan Solsvik <jonasjso@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_derive = "0.1.x"
enum_derive = "0.1.x"
didcomm-rs = "0.3"
ed25519-dalek = "1.0"
rand_core = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
did-key = "*"
ssi = { path = "../ssi", default-features = false,  features = ["ed25519-dalek", "rand", "sha2"]  }
ssi_did_key = { path = "../ssi/did-key", package = "did-method-key" }
rand = "0.7"
async-std = { version = "1.9", features = ["attributes"] }
