[package]
name = "didchat"
version = "0.1.0"
authors = ["Jonas Johan Solsvik <jonasjso@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_derive = "0.1.x"
enum_derive = "0.1.x"
didcomm-rs = "0.2.2"
ed25519-dalek = "1.0"
rand_core = "0.5"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
did-key = "*"
