[package]
name = "keytojwk"
version = "0.1.0"
authors = ["Jonas Johan Solsvik <jonasjso@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
did-key = "0.0.11"
ed25519-dalek = "1.0"
rand = "0.7"
ssi = { path = "../../../../spruceid/didkit/ssi", default-features = false,  features = ["ed25519-dalek", "rand", "sha2"]  }
serde_json = "1.0"
